# video-use

./: CLAUDE.md  SKILL.md  pyproject.toml  server.py
helpers/: cut_vo.py  detect_shots.py  export_resolve.py  extract_clips.py  render.py  transcribe_batch.py
static/: app.html
